<resources xmlns:tools="http://schemas.android.com/tools" tools:locale="en" tools:ignore="MissingTranslation">
    <string name="app_name">Pedometer</string>
    <string name="app_name_long">Privacy Friendly Pedometer</string>
    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
    <string name="action_help">Help</string>
    <string name="action_about">About</string>
    <string name="action_settings">Settings</string>
    <string name="action_main">Pedometer</string>
    <string name="action_training">Training</string>
    <string name="version_number">Version</string>
    <string name="about_author">Author: </string>
    <string name="about_author_names" translatable="false">Noah Schlegel, Tobias Neidig </string>
    <string name="about_author_contributors"> and contributors.</string>
    <string name="about_affiliation">In affiliation with</string>
    <string name="more_info">More information can be found on:</string>
    <string name="about_third_party_libs">The app uses <a href="https://github.com/PhilJay/MPAndroidChart">MPAndroidChart from Philipp Jahoda</a> (Apache 2 License).</string>
    <string name="privacy_friendly">This application belongs to the Privacy Friendly Apps group developed by the research group SECUSO. Sourcecode licensed under GPLv3. Images copyright SECUSO and Google Inc.</string>
    <string name="github" translatable="false"><a href="https://github.com/SecUSo/privacy-friendly-activity-tracker">Github-Repo</a></string>
    <string name="url"><a href="https://www.secuso.org/pfa">SECUSO-Website</a></string>
    <string name="month">Month</string>
    <string name="week">Week</string>
    <string name="day">Day</string>
    <string name="steps">Steps</string>
    <string name="calories">calories</string>
    <string name="activity_summary_subtitle">Summary of activities</string>
    <string name="activity_chart_summary_subtitle">Detailed summary of your activities</string>
    <string name="summary_card_kilocalories">kcal</string>
    <string name="summary_card_calories">cal</string>
    <string name="correct_steps">Correct steps</string>
    <string name="correct_steps_dialog_title">Correct steps</string>
    <string name="correct_steps_dialog_message">Please provide a new number of steps you walked.</string>
    <string name="hint_steps">Number of steps</string>
    <string name="pause_step_detection">Pause step detection</string>
    <string name="continue_step_detection">Continue step detection</string>
    <string name="help_overview_heading">Overview</string>
    <string name="help_intro">This app can count your steps in background, provides you an overview about your walked steps and allows you to define custom walking modes and notifications if the achievement of your daily step goal is in danger.</string>
    <string name="help_functionality_step_counter_summary">The step counter counts your daily steps in background and can be disabled in the settings.</string>
    <string name="help_functionality_notification_heading">Permanent Notification</string>
    <string name="help_functionality_notification">Notification</string>
    <string name="help_functionality_notification_summary">The permanent notification is necessary to keep the step counter alive in background. The content of the notification can be chosen in the settings.</string>
    <string name="help_functionality_notification_delete">You can disable all notifications in system preferences.</string>
    <string name="help_functionality_motivation_alert">Motivation alert</string>
    <string name="help_functionality_motivation_alert_summary">The app can show you motivation alerts if the achievement of your daily step goal is in danger. You can define the criterion, the time of day and the notification texts.</string>
    <string name="help_privacy_heading">Privacy Info</string>
    <string name="help_permission_boot_heading">Permission: Receive Boot Completed</string>
    <string name="help_permission_boot_description">is used to start the step counter and set the notifications at boot time. If the permission is not granted you have to start the app manually once after boot to activate the app.</string>
    <string name="help_permissions_selection">The storage and gps permissions used by Privacy Friendly Pedometer can be managed by the user in Android versions of 6+.</string>
    <string name="help_permission_wake_heading">Permission: Wake Lock</string>
    <string name="help_permission_wake_description">is used to keep the CPU awake to count the steps in background.</string>
    <string name="help_permission_gps_heading">Permission: Precise location</string>
    <string name="help_permission_gps_description">is used to show your current walking speed on home screen. If the permission is not granted the walking speed will not be showed - there are no other implications.</string>
    <string name="pref_header_general">General</string>
    <string name="pref_group_title_personal_settings">Personalization</string>
    <string name="pref_step_counter_enabled" translatable="false">org.secuso.privacyfriendlyactivitytracker.pref.step_counter_enabled</string>
    <string name="pref_title_step_counter_enabled">Permanent step counter</string>
    <string name="pref_summary_step_counter_enabled">The app counts your steps in background.</string>
    <string name="pref_use_wake_lock" translatable="false">org.secuso.privacyfriendlyactivitytracker.pref.use_wake_lock</string>
    <string name="pref_title_use_wake_lock">Keep processor awake</string>
    <string name="pref_summary_use_wake_lock">On some devices the processor falls asleep and prevents counting steps. Enable this to keep the processor awake while counting steps - this may drain your battery!</string>
    <string name="pref_use_wake_lock_during_training" translatable="false">org.secuso.privacyfriendlyactivitytracker.pref.use_wake_lock_during_training</string>
    <string name="pref_title_use_wake_lock_during_training">Wake lock during training</string>
    <string name="pref_summary_use_wake_lock_during_training">For better results during training mode keep processor awake. If app should keep the processor awake at any time this is automatically the case.</string>
    <string name="pref_show_velocity" translatable="false">org.secuso.privacyfriendlyactivitytracker.pref.show_velocity</string>
    <string name="pref_title_show_velocity">Show current velocity</string>
    <string name="pref_summary_show_velocity">The app shows your current velocity in daily report. Access to your location is required to calculate the exact velocity.</string>
    <string name="pref_default_daily_step_goal" translatable="false">10000</string>
    <string name="pref_title_daily_step_goal">Personal daily step goal</string>
    <string name="pref_unit_of_length" translatable="false">org.secuso.privacyfriendlyactivitytracker.pref.unit_of_length</string>
    <string name="pref_title_unit_of_length">Unit of length</string>
    <string-array name="pref_keys_unit_of_length">
        <item>kilometers</item>
        <item>miles</item>
    </string-array>
    <string-array name="pref_values_unit_of_length" translatable="false">
        <item>km</item>
        <item>mi</item>
    </string-array>
    <string name="unit_of_length_km">1|km|kilometers|km/h|1000|m</string>
    <string name="unit_of_length_mi">0.621371|mi|miles|mph|5280|ft</string>
    <string name="pref_unit_of_energy" translatable="false">org.secuso.privacyfriendlyactivitytracker.pref.unit_of_energy</string>
    <string name="pref_title_unit_of_energy">Unit of energy</string>
    <string-array name="pref_keys_unit_of_energy">
        <item>calories</item>
        <item>joules</item>
    </string-array>
    <string-array name="pref_values_unit_of_energy" translatable="false">
        <item>cal</item>
        <item>J</item>
    </string-array>
    <string name="pref_explanation_weight_and_gender">To improve the calculation of the calories please set your weight and gender.</string>
    <string name="pref_summary_notification_permanent">The permanent notification is shown when the app counts your steps in background. You can customize what the app should show you.</string>
    <string name="pref_weight" translatable="false">org.secuso.privacyfriendlyactivitytracker.pref.weight</string>
    <string name="pref_title_weight">Weight (kg)</string>
    <string name="pref_default_weight" translatable="false">65.0</string>
    <string name="pref_gender" translatable="false">org.secuso.privacyfriendlyactivitytracker.pref.gender</string>
    <string name="pref_title_gender">Gender</string>
    <string name="pref_accelerometer_threshold" translatable="false">org.secuso.privacyfriendlyactivitytracker.pref.accelerometer_threshold</string>
    <string name="pref_title_accelerometer_threshold">Sensitivity</string>
    <string name="pref_header_notifications">Notifications</string>
    <string name="pref_group_title_permanent_notification">Permanent Notification</string>
    <string name="pref_group_title_motivation_alert">Motivation Alert</string>
    <string name="pref_notification_permanent_show_steps" translatable="false">org.secuso.privacyfriendlyactivitytracker.pref.permanent_notification_show_steps</string>
    <string name="pref_title_notification_permanent_show_steps">Show number of steps walked today</string>
    <string name="pref_notification_permanent_show_distance" translatable="false">org.secuso.privacyfriendlyactivitytracker.pref.permanent_notification_show_distance</string>
    <string name="pref_title_notification_permanent_show_distance">Show distance walked today</string>
    <string name="pref_notification_permanent_show_calories" translatable="false">org.secuso.privacyfriendlyactivitytracker.pref.permanent_notification_show_calories</string>
    <string name="pref_title_notification_permanent_show_calories">Show number of calories</string>
    <string name="pref_notification_motivation_alert_enabled" translatable="false">org.secuso.privacyfriendlyactivitytracker.pref.motivation_alert_enabled</string>
    <string name="pref_title_notification_motivation_alert_enabled">Enable motivation alert</string>
    <string name="pref_notification_motivation_alert_time" translatable="false">org.secuso.privacyfriendlyactivitytracker.pref.motivation_alert_time</string>
    <string name="pref_title_notification_motivation_alert_time">Motivation alert time</string>
    <string name="pref_title_notification_motivation_alert_texts">Motivation notification texts</string>
    <string name="pref_notification_motivation_alert_criterion" translatable="false">org.secuso.privacyfriendlyactivitytracker.pref.motivation_alert_criterion</string>
    <string name="pref_title_notification_motivation_alert_criterion">Motivation alert criterion</string>
    <string name="pref_header_walking_modes">Walking modes</string>
    <string name="pref_daily_step_goal" translatable="false">org.secuso.privacyfriendlyactivitytracker.pref.daily_step_goal</string>
    <string name="action_calories">Calories</string>
    <string name="action_distance">Distance</string>
    <string name="action_steps">Steps</string>
    <string name="save">Save</string>
    <string name="widget_config_data_set_title">Which data should be displayed?</string>
    <string name="help_permission_foreground_description">is needed for the continuous service on Android 9 or higher.</string>
    <string name="help_permission_foreground_heading">Permission: Foreground Service</string>
    <string name="help_permission_storage_description">is needed to export your collected data as a CSV-file. This permission is only requested when you want to export your data.</string>
    <string name="help_permission_storage_heading">Permission: Write External Storage</string>
</resources>