<?xml version="1.0" encoding="utf-8"?>
<!--
    Privacy Friendly Pedometer is licensed under the GPLv3.
    Copyright (C) 2017  Tobias Neidig

    This program is free software: you can redistribute it and/or modify
    it under the terms of the GNU General Public License as published by
    the Free Software Foundation, either version 3 of the License, or
    (at your option) any later version.

    This program is distributed in the hope that it will be useful,
    but WITHOUT ANY WARRANTY; without even the implied warranty of
    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
    GNU General Public License for more details.

    You should have received a copy of the GNU General Public License
    along with this program. If not, see <http://www.gnu.org/licenses/>.
-->
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory android:title="@string/help_overview_heading">
        <Preference
            android:selectable="false"
            android:persistent="false"
            android:title=""
            android:summary="@string/help_intro"/>
        <Preference
            android:summary="@string/help_functionality_step_counter_summary"
            android:selectable="false"/>
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/help_functionality_notification">
        <Preference android:title="@string/help_functionality_notification_heading"
            android:summary="@string/help_functionality_notification_summary"
            android:selectable="false"/>
        <Preference
            android:summary="@string/help_functionality_notification_delete"
            android:selectable="false"/>
        <Preference android:title="@string/help_functionality_motivation_alert"
            android:summary="@string/help_functionality_motivation_alert_summary"
            android:selectable="false"/>
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/help_privacy_heading">
        <Preference
            android:summary="@string/help_permissions_selection"
            android:selectable="false" />
        <Preference
            android:summary="@string/help_permission_boot_description"
            android:title="@string/help_permission_boot_heading"
            android:selectable="false" />
        <Preference
            android:summary="@string/help_permission_wake_description"
            android:title="@string/help_permission_wake_heading"
            android:selectable="false" />
        <Preference
            android:summary="@string/help_permission_storage_description"
            android:title="@string/help_permission_storage_heading"
            android:selectable="false" />
        <Preference
            android:summary="@string/help_permission_foreground_description"
            android:title="@string/help_permission_foreground_heading"
            android:selectable="false" />
    </PreferenceCategory>

</PreferenceScreen>