<!--
    Privacy Friendly Pedometer is licensed under the GPLv3.
    Copyright (C) 2017  Tobias Neidig

    This program is free software: you can redistribute it and/or modify
    it under the terms of the GNU General Public License as published by
    the Free Software Foundation, either version 3 of the License, or
    (at your option) any later version.

    This program is distributed in the hope that it will be useful,
    but WITHOUT ANY WARRANTY; without even the implied warranty of
    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
    GNU General Public License for more details.

    You should have received a copy of the GNU General Public License
    along with this program. If not, see <http://www.gnu.org/licenses/>.
-->
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory android:title="@string/pref_group_title_permanent_notification">
        <Preference android:summary="@string/pref_summary_notification_permanent" />
        <SwitchPreference
            android:defaultValue="true"
            android:key="@string/pref_notification_permanent_show_steps"
            android:title="@string/pref_title_notification_permanent_show_steps" />
        <SwitchPreference
            android:defaultValue="false"
            android:key="@string/pref_notification_permanent_show_distance"
            android:title="@string/pref_title_notification_permanent_show_distance" />
        <SwitchPreference
            android:defaultValue="false"
            android:key="@string/pref_notification_permanent_show_calories"
            android:title="@string/pref_title_notification_permanent_show_calories" />
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/pref_group_title_motivation_alert">
        <SwitchPreference
            android:defaultValue="false"
            android:key="@string/pref_notification_motivation_alert_enabled"
            android:title="@string/pref_title_notification_motivation_alert_enabled" />
        <!-- default is 18:00 -->
        <org.secuso.privacyfriendlyactivitytracker.preferences.TimePreference
            android:defaultValue="64800000"
            android:key="@string/pref_notification_motivation_alert_time"
            android:title="@string/pref_title_notification_motivation_alert_time" />
        <!-- NOTE: Hide buttons to simplify the UI. Users can touch outside the dialog to
             dismiss it. -->
        <!-- NOTE: ListPreference's summary should be set to its value by the activity code. -->
        <ListPreference
            android:defaultValue="70"
            android:entries="@array/pref_keys_notification_motivation_alert_criterion"
            android:entryValues="@array/pref_values_notification_motivation_alert_criterion"
            android:key="@string/pref_notification_motivation_alert_criterion"
            android:negativeButtonText="@null"
            android:positiveButtonText="@null"
            android:title="@string/pref_title_notification_motivation_alert_criterion" />

        <Preference android:title="@string/pref_title_notification_motivation_alert_texts">
            <intent
                android:targetClass="org.secuso.privacyfriendlyactivitytracker.activities.MotivationAlertTextsActivity"
                android:targetPackage="org.secuso.privacyfriendlyactivitytracker" />
        </Preference>
    </PreferenceCategory>
</PreferenceScreen>
