<preference-headers xmlns:android="http://schemas.android.com/apk/res/android">

    <header
        android:fragment="org.secuso.privacyfriendlystepcounter.activities.PreferencesActivity$GeneralPreferenceFragment"
        android:icon="@drawable/ic_info_black_24dp"
        android:title="@string/pref_header_general" />

    <header
        android:fragment="org.secuso.privacyfriendlystepcounter.activities.PreferencesActivity$NotificationPreferenceFragment"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/pref_header_notifications" />

    <header
        android:icon="@drawable/ic_walk_black_24dp"
        android:title="@string/pref_header_walking_modes">
        <intent
            android:targetClass="org.secuso.privacyfriendlystepcounter.activities.WalkingModesActivity"
            android:targetPackage="org.secuso.privacyfriendlystepcounter" />
    </header>

</preference-headers>
